Navbar flex container

--- a/landing-pages/vscode/index.html
+++ b/landing-pages/vscode/index.html
@@ -9,8 +9,43 @@
   <body>
     <header>
       <nav>
-        <div class="left--nav"></div>
-        <div class="right--nav"></div>
+        <div class="left-nav">
+          <ul>
+            <li>
+              <a class="navbar--brand" href="/">
+                <span>Visual Studio Code</span>
+              </a>
+            </li>
+            <li><a href="#">Docks</a></li>
+            <li><a href="#">Updates</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">API</a></li>
+            <li><a href="#">Extentions</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">GitHub Copilot</a></li>
+          </ul>
+        </div>
+        <div class="right-nav">
+          <ul>
+            <li>
+              <button>
+                <img
+                  class="theme-switch"
+                  src="./assets/theme-dark.svg"
+                  alt="dark theme"
+                />
+              </button>
+            </li>
+            <li>
+              <button>
+                <img src="./assets/search.svg" alt="search" />
+              </button>
+            </li>
+            <li>
+              <button>Download</button>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
   </body>
