--- a/landing-pages/vscode/index.html
+++ b/landing-pages/vscode/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav role="navigation" aria-label="Top Level">
         <div class="left-nav">
           <ul>
             <li>
@@ -40,6 +40,7 @@
               <button>
                 <img src="./assets/search.svg" alt="search" />
               </button>
+              <input type="search" name="search" class="search" />
             </li>
             <li>
               <button>Download</button>
