Placed the icon inside the input field

--- a/landing-pages/vscode/index.html
+++ b/landing-pages/vscode/index.html
@@ -37,11 +37,21 @@
               </button>
             </li>
             <li>
-              <button>
-                <img src="./assets/search.svg" alt="search" />
-              </button>
-              <input type="search" name="search" class="search" />
+              <div class="search-container">
+                <input
+                  type="search"
+                  name="search"
+                  class="search"
+                  placeholder="Search..."
+                />
+                <img
+                  src="./assets/search.svg"
+                  alt="search"
+                  class="search-icon"
+                />
+              </div>
             </li>
+
             <li>
               <button>Download</button>
             </li>
