Completed the navbar

--- a/landing-pages/vscode/index.html
+++ b/landing-pages/vscode/index.html
@@ -28,9 +28,8 @@
         <div class="right-nav">
           <ul>
             <li>
-              <button>
+              <button class="theme-switch">
                 <img
-                  class="theme-switch"
                   src="./assets/theme-dark.svg"
                   alt="dark theme"
                 />
@@ -42,7 +41,7 @@
                   type="search"
                   name="search"
                   class="search"
-                  placeholder="Search..."
+                  placeholder="Search Docs"
                 />
                 <img
                   src="./assets/search.svg"
