Fixed the vertical align issue on the navbar

--- a/landing-pages/vscode/index.html
+++ b/landing-pages/vscode/index.html
@@ -29,10 +29,7 @@
           <ul>
             <li>
               <button class="theme-switch">
-                <img
-                  src="./assets/theme-dark.svg"
-                  alt="dark theme"
-                />
+                <img src="./assets/theme-dark.svg" alt="dark theme" />
               </button>
             </li>
             <li>
@@ -58,5 +55,21 @@
         </div>
       </nav>
     </header>
+    <p
+      style="
+        text-align: center;
+        margin: 8px 0;
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 160%;
+      "
+    >
+      <a
+        style="color: #005fb8; text-decoration: underline; font-weight: 500"
+        href="/"
+        >Version 1.94</a
+      >
+      is now available! Read about the new features and fixes from September.
+    </p>
   </body>
 </html>
