Struggling with buttons

--- a/landing-pages/vscode/index.html
+++ b/landing-pages/vscode/index.html
@@ -71,5 +71,24 @@
       >
       is now available! Read about the new features and fixes from September.
     </p>
+    <main>
+      <div class="hero-content">
+        <div class="hero-text">
+          <h1>Code faster with AI</h1>
+          <p class="hero-description">
+            Visual Studio Code with GitHub Copilot supercharges your code with
+            AI-powered suggestions, right in your editor.
+          </p>
+        </div>
+        <div class="download-content">
+          <button>Download for Windows</button>
+          <button>Try GitHub Copilot</button>
+        </div>
+        <img
+          src="./assets/home-screenshot-copilot-light.png"
+          alt="home-screenshot"
+        />
+      </div>
+    </main>
   </body>
 </html>
