--- a/landing-pages/vscode/index.html
+++ b/landing-pages/vscode/index.html
@@ -84,9 +84,30 @@
           <button>Download for Windows</button>
           <button>Try GitHub Copilot</button>
         </div>
+        <p class="terms" style="text-align: center;">
+          By using VS Code, you agree to its
+          <span class="wrap-together"
+            ><a
+              href="https://code.visualstudio.com/license"
+              target="_blank"
+              rel="noopener"
+              title="View the Visual Studio Code license."
+              >license</a
+            >
+            and
+            <a
+              href="https://go.microsoft.com/fwlink/?LinkId=521839"
+              target="_blank"
+              rel="noopener"
+              title="View the Microsoft privacy statement."
+              >privacy statement</a
+            >.</span
+          >
+        </p>
         <img
           src="./assets/home-screenshot-copilot-light.png"
           alt="home-screenshot"
+          class="home-screenshot"
         />
       </div>
     </main>
