--- a/landing-pages/vscode/index.html
+++ b/landing-pages/vscode/index.html
@@ -72,7 +72,7 @@
       is now available! Read about the new features and fixes from September.
     </p>
     <main>
-      <div class="hero-content">
+      <section class="hero-content">
         <div class="hero-text">
           <h1>Code faster with AI</h1>
           <p class="hero-description">
@@ -84,7 +84,7 @@
           <button>Download for Windows</button>
           <button>Try GitHub Copilot</button>
         </div>
-        <p class="terms" style="text-align: center;">
+        <p class="terms" style="text-align: center">
           By using VS Code, you agree to its
           <span class="wrap-together"
             ><a
@@ -109,7 +109,38 @@
           alt="home-screenshot"
           class="home-screenshot"
         />
-      </div>
+      </section>
+      <section class="github-copilot">
+        <div class="copilot">
+          <div>
+            <h2>Code with GitHub Copilot</h2>
+            <p>
+              Write code faster and smarter with GitHub Copilot, your AI pair
+              programmer.
+            </p>
+            <a href="/">Try GitHub Copilot free for 30 days</a>
+          </div>
+          <div>
+            <a href="#">Completions</a> present suggestions automatically to
+            help you code more efficiently.
+          </div>
+          <div>
+            <a href="#">Copilot Chat</a> understands the context of your code,
+            workspace, extensions, settings, and more.
+          </div>
+          <div>
+            <a href="#">Inline Chat</a> enables you to iteratively generate
+            edits and get answers to quick questions, directly on your code.
+          </div>
+        </div>
+        <div class="copilot-screenshot">
+          <img
+            src="./assets/swimlane-copilot-light.png"
+            alt="copilot"
+            class="copilot"
+          />
+        </div>
+      </section>
     </main>
   </body>
 </html>
