Studied the meta tags

--- a/dave-gray/01_lesson/index.html
+++ b/dave-gray/01_lesson/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Alokananda Y">
+    <meta name="description" content="This page contains all the things I am learning about HTML">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>HTML Full Course for Beginners</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>A note on metadata.</h1>
