--- a/dave-gray/02_lesson/index.html
+++ b/dave-gray/02_lesson/index.html
@@ -19,17 +19,24 @@
     <h3>My daily schedule</h3>
     <p>
       Let me tell you how: <br />
-      I learn more about web dev.
-      <br />...I plan out my schedule. <br />...I use resources from
-      <a target="_blank" href="https://developer.mozilla.org/en-US/">MDN</a>.
+      &nbsp;...I learn more about web dev.
+      <br />&nbsp;...I plan out my schedule. <br />&nbsp;...I use resources from
+      <a target="_blank" href="https://developer.mozilla.org/en-US/"
+        ><abbr title="Mozilla Developer Network">MDN</abbr></a
+      >.
     </p>
     <hr />
     <h2>I'm also planning to join a startup</h2>
-    <p>I have been learning hard and I want to start contributing.</p>
+    <p>
+      I have been learning hard and I want to
+      <strong>start contributing</strong>.
+    </p>
     <p>I live in Bangalore and I want to interact with founders.</p>
     <h3>Placed I would like to visit</h3>
     <p>I've heard good things about the start-up ecosystem here.</p>
     <h3>I want to avoid large companies</h3>
-	<p>No way!</p>
+    <p><em>No way!</em></p>
+    <hr />
+    &lt;&lt;&lt;&nbsp;&copy;&nbsp;Alokananda <span>Y</span>&nbsp;&gt;&gt; &gt;
   </body>
 </html>
