--- a/modern-frontend/first-website/index.html
+++ b/modern-frontend/first-website/index.html
@@ -10,6 +10,6 @@
   <body>
     <h1>Code your universe!</h1>
     <img src="./assets/astro.jpg" alt="Astronaut codes" />
-    <p>&copy;<span id="year"></span>Alokananda <span>Y</span></p>
+    <p>&copy;&nbsp;<span id="year"></span>&nbsp;Alokananda <span class="initial">Y</span></p>
   </body>
 </html>
