Applying flex container to the navigation

--- a/landing_pages/index.html
+++ b/landing_pages/index.html
@@ -20,6 +20,7 @@
 		content="Visual Studio Code is a code editor redefined and optimized for building and debugging modern web and cloud applications.  Visual Studio Code is free and available on your favorite platform - Linux, macOS, and Windows." />
 	<meta property="og:image" content="https://code.visualstudio.com/opengraphimg/opengraph-home.png" />
 	<meta property="og:url" content="https://code.visualstudio.com/" />
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -27,8 +28,7 @@
 		<nav role="navigation">
 			<div class="left__nav">
 				<div class="logo">
-					<img src="./images/vscode_logo.png" alt="vscode_logo">
-					<a href="/">Visual Studio code</a>
+					<a class="navbar-brand" href="/"><span>Visual Studio Code</span></a>
 				</div>
 				<ul>
 					<li><a href="#">Docs</a></li>
